2004-03-16  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : remove a C.WL.

2004-03-16  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs : don't gen a Signals hash per class.
	* generator/Signal.cs : gen checks for [ConnectBefore].
	* generator/SignalHandler.cs : add connect_flags param to ctor.
	* glib/ConnectBeforeAttribute.cs : new attr
	* glib/Makefile.am : add new file
	* glib/Object.cs : add before/after hashes and EventLists
	* gnome/CanvasProxy.cs : use AfterSignals and AfterHandlers.

2004-03-14  John Luke  <jluke@cfl.rr.com>

	* parser/gapi-fixup.in:
	* generator/gapi-codegen.in: s/@MONO@/@RUNTIME@

2004-03-12  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.am : automakify the build
	* */Makefile.in : kill
	* *.custom : remove System.Drawing dependencies
	* *.cs : remove System.Drawing dependencies
	* *-api.xml : mv to *-api.raw
	* glue/* : mv to lib specific gluelibs for glib, gdk, gtk, and glade.
	* gtk/gtk-symbols : alias GtkType to GType
	* sources/gtk-sharp-sources.xml : create .raw files. They are now 
	transformed to .xml files by the metadata compilation step.

2004-03-08  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs : ignore virtual_method elems for now.
	* parser/gapi2xml.pl : parse the non-signal class methods and add as
	virtual_method elements in the API xml
	* */*-api.xml : regen

2004-03-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glue/Makefile.am:
	* glue/makefile.win32:
	* glue/thread-notify.c: dropped.

	* gtk/ThreadNotify.cs: use just Idle.Add, which is what the deprecated
	gda_input_add does. No more P/Invoke here.

2004-03-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glue/Makefile.am:
	* glue/makefile.win32: added thread-notify.o

	* glue/thread-notify.c: handles pipe creation/read/write/close for
	ThreadNotify.

	* gtk/ThreadNotify.cs: P/Invoke the thread-notify code instead of libc
	functions.

2004-02-26  Mike Kestner  <mkestner@ximian.com>
