@@ -1,5 +1,10 @@
 2004-03-16  Mike Kestner  <mkestner@ximian.com>
 
+	* gdk/Makefile.am : add new file.
+	* gdk/Size.cs : implementation of a Size value type.
+
+2004-03-16  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/Signal.cs : remove a C.WL.
 
 2004-03-16  Mike Kestner  <mkestner@ximian.com>
